--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -7,6 +7,7 @@
     <title>Client Portal - SecureTech</title>    <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+       <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
         tailwind.config = {
             theme: {
@@ -361,6 +362,122 @@
                 </div>
             </div>
 
+            <!-- Analytics -->
+            <section class="mb-8">
+                <div class="grid grid-cols-1 lg:grid-cols-3 gap-4 md:gap-6">
+                    <div class="lg:col-span-2 bg-slate-800 rounded-xl p-6 border border-slate-700">
+                        <div class="flex items-start justify-between gap-4 mb-4">
+                            <div>
+                                <h3 class="text-white text-lg font-bold">Ticket Volume</h3>
+                                <p class="text-sm text-slate-400">Last 7 days</p>
+                            </div>
+                            <span
+                                class="text-xs text-slate-400 bg-slate-900/60 border border-slate-700 px-3 py-1 rounded-full">Auto-updated</span>
+                        </div>
+                        <div class="h-64">
+                            <canvas id="ticketsChart"></canvas>
+                        </div>
+                    </div>
+
+                    <div class="bg-slate-800 rounded-xl p-6 border border-slate-700">
+                        <div class="flex items-start justify-between gap-4 mb-4">
+                            <div>
+                                <h3 class="text-white text-lg font-bold">Security Score</h3>
+                                <p class="text-sm text-slate-400">Trend (30 days)</p>
+                            </div>
+                            <span
+                                class="text-xs text-secondary bg-secondary/10 border border-secondary/20 px-3 py-1 rounded-full">Good</span>
+                        </div>
+                        <div class="h-64">
+                            <canvas id="securityChart"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Alerts + Recommendations -->
+            <section class="grid grid-cols-1 lg:grid-cols-2 gap-4 md:gap-6 mb-8">
+                <div class="bg-slate-800 rounded-xl p-6 border border-slate-700">
+                    <div class="flex items-center justify-between mb-4">
+                        <h3 class="text-white text-lg font-bold">Recent Alerts</h3>
+                        <span class="text-xs text-slate-400">Today</span>
+                    </div>
+                    <div class="space-y-3">
+                        <div class="flex items-start gap-3 bg-slate-900/60 border border-slate-700 rounded-lg p-4">
+                            <div
+                                class="w-10 h-10 rounded-lg bg-yellow-500/10 border border-yellow-500/20 text-yellow-400 flex items-center justify-center">
+                                <i class="fa-solid fa-triangle-exclamation"></i>
+                            </div>
+                            <div class="flex-1">
+                                <div class="flex items-center justify-between gap-3">
+                                    <p class="text-white font-semibold">Unusual login attempt blocked</p>
+                                    <span class="text-xs text-slate-400">08:24</span>
+                                </div>
+                                <p class="text-sm text-slate-400">IP: 185.22.xx.xx • Policy: MFA required</p>
+                            </div>
+                        </div>
+
+                        <div class="flex items-start gap-3 bg-slate-900/60 border border-slate-700 rounded-lg p-4">
+                            <div
+                                class="w-10 h-10 rounded-lg bg-primary/10 border border-primary/20 text-primary flex items-center justify-center">
+                                <i class="fa-solid fa-shield"></i>
+                            </div>
+                            <div class="flex-1">
+                                <div class="flex items-center justify-between gap-3">
+                                    <p class="text-white font-semibold">Endpoint protection updated</p>
+                                    <span class="text-xs text-slate-400">11:02</span>
+                                </div>
+                                <p class="text-sm text-slate-400">Definitions synced across 12 devices</p>
+                            </div>
+                        </div>
+
+                        <div class="flex items-start gap-3 bg-slate-900/60 border border-slate-700 rounded-lg p-4">
+                            <div
+                                class="w-10 h-10 rounded-lg bg-secondary/10 border border-secondary/20 text-secondary flex items-center justify-center">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
+                            <div class="flex-1">
+                                <div class="flex items-center justify-between gap-3">
+                                    <p class="text-white font-semibold">Backup verification passed</p>
+                                    <span class="text-xs text-slate-400">14:18</span>
+                                </div>
+                                <p class="text-sm text-slate-400">RPO met • Snapshot integrity OK</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="bg-slate-800 rounded-xl p-6 border border-slate-700">
+                    <div class="flex items-center justify-between mb-4">
+                        <h3 class="text-white text-lg font-bold">Recommended Actions</h3>
+                        <span class="text-xs text-slate-400">Next 7 days</span>
+                    </div>
+                    <div class="space-y-3">
+                        <div class="flex items-start gap-3 rounded-lg p-4 border border-slate-700 bg-slate-900/60">
+                            <i class="fa-solid fa-user-shield text-secondary mt-1"></i>
+                            <div>
+                                <p class="text-white font-semibold">Enable admin MFA for all accounts</p>
+                                <p class="text-sm text-slate-400">Improves account resilience and lowers risk score.</p>
+                            </div>
+                        </div>
+                        <div class="flex items-start gap-3 rounded-lg p-4 border border-slate-700 bg-slate-900/60">
+                            <i class="fa-solid fa-laptop-code text-primary mt-1"></i>
+                            <div>
+                                <p class="text-white font-semibold">Schedule patch window</p>
+                                <p class="text-sm text-slate-400">Apply OS updates to 2 remaining endpoints.</p>
+                            </div>
+                        </div>
+                        <div class="flex items-start gap-3 rounded-lg p-4 border border-slate-700 bg-slate-900/60">
+                            <i class="fa-solid fa-database text-accent mt-1"></i>
+                            <div>
+                                <p class="text-white font-semibold">Review backup retention</p>
+                                <p class="text-sm text-slate-400">Align retention with compliance requirements.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <!-- Quick Help -->
             <div class="grid md:grid-cols-2 gap-4 md:gap-6">
                 <a href="#"
@@ -423,6 +540,16 @@
             toggleBtn.addEventListener('click', toggleSidebar);
             overlay.addEventListener('click', toggleSidebar);
 
+            // Reset sidebar/overlay state when resizing (mobile <-> desktop)
+            window.addEventListener('resize', () => {
+                if (window.innerWidth >= 1024) {
+                    overlay.classList.add('hidden');
+                } else {
+                    setSidebarDirection();
+                    overlay.classList.add('hidden');
+                }
+            });
+
             // When RTL toggles, re-align sidebar and close overlay
             const rtlBtns = document.querySelectorAll('#rtl-toggle, #rtl-toggle-mobile');
             rtlBtns.forEach(btn => btn.addEventListener('click', () => {
@@ -433,6 +560,76 @@
             }));
         }
 
+    </script>
+
+    <script>
+        // Charts
+        if (window.Chart) {
+            const ticketsEl = document.getElementById('ticketsChart');
+            const securityEl = document.getElementById('securityChart');
+
+            if (ticketsEl) {
+                new Chart(ticketsEl.getContext('2d'), {
+                    type: 'bar',
+                    data: {
+                        labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
+                        datasets: [{
+                            label: 'Tickets',
+                            data: [1, 0, 2, 1, 3, 1, 0],
+                            backgroundColor: 'rgba(0, 212, 170, 0.25)',
+                            borderColor: '#00D4AA',
+                            borderWidth: 1,
+                            borderRadius: 8,
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        plugins: {
+                            legend: { labels: { color: '#94a3b8' } },
+                            tooltip: { backgroundColor: 'rgba(15, 23, 42, 0.9)', titleColor: '#fff', bodyColor: '#cbd5e1' }
+                        },
+                        scales: {
+                            x: { ticks: { color: '#94a3b8' }, grid: { color: 'rgba(148, 163, 184, 0.12)' } },
+                            y: { ticks: { color: '#94a3b8' }, grid: { color: 'rgba(148, 163, 184, 0.12)' }, beginAtZero: true }
+                        }
+                    }
+                });
+            }
+
+            if (securityEl) {
+                new Chart(securityEl.getContext('2d'), {
+                    type: 'line',
+                    data: {
+                        labels: ['W1', 'W2', 'W3', 'W4', 'W5', 'W6'],
+                        datasets: [{
+                            label: 'Score',
+                            data: [72, 76, 78, 81, 83, 86],
+                            borderColor: '#0066FF',
+                            backgroundColor: 'rgba(0, 102, 255, 0.12)',
+                            borderWidth: 2,
+                            tension: 0.35,
+                            fill: true,
+                            pointRadius: 4,
+                            pointBackgroundColor: '#0066FF',
+                            pointBorderColor: '#0f172a',
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        plugins: {
+                            legend: { labels: { color: '#94a3b8' } },
+                            tooltip: { backgroundColor: 'rgba(15, 23, 42, 0.9)', titleColor: '#fff', bodyColor: '#cbd5e1' }
+                        },
+                        scales: {
+                            x: { ticks: { color: '#94a3b8' }, grid: { color: 'rgba(148, 163, 184, 0.12)' } },
+                            y: { ticks: { color: '#94a3b8' }, grid: { color: 'rgba(148, 163, 184, 0.12)' }, suggestedMin: 60, suggestedMax: 100 }
+                        }
+                    }
+                });
+            }
+        }
     </script>
 </body>
 
